# CMake_GoogleTest_Demo

./: CMakeLists.txt  main.cpp
src/: APlusB.cpp  APlusB.h
test/: test.cpp
